# compass

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
cmake/: ccache.cmake  clang-tidy.cmake  cppcheck.cmake  declarations.cmake  dependencies.cmake  extra_flags.cmake  options.cmake  rpath.cmake  summary.cmake  test.cmake
docs/: keeper.txt
lib/: CMakeLists.txt
lib/compass/: CMakeLists.txt  README.md
lib/compass/physics/: CMakeLists.txt  quantity.hpp  units.hpp
lib/compass/space/common/: coordinate_system.hpp  point.hpp
scripts/: build.sh
test/compass/: CMakeLists.txt
test/compass/physics/: CMakeLists.txt  convert_units_test.cpp
themes/: custom.css
